# powderpuff

./: CMakeLists.txt  LICENSE
cmake/: FindSDL2_ttf.cmake
example/: CMakeLists.txt  SampleGame.cpp  SampleGame.h  main.cpp
include/: AssetStore.h  Game.h  Sprite.h
src/: AssetStore.cpp  Game.cpp  Sprite.cpp
